--- a/MachineLearning/practice/1_model_train.ipynb
+++ b/MachineLearning/practice/1_model_train.ipynb
@@ -15,14 +15,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    5444\n1    1044\nName: y, dtype: int64"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data = pd.read_csv(\"./data/train_all_1.csv\")\n",
+    "data = pd.read_csv(\"./data/1_train1.csv\")\n",
     "data = data.fillna(0)\n",
     "del data[data.columns[0]]\n",
-    "X = data.iloc[:, :-51]\n",
-    "y = data['y_0']"
+    "X = data.iloc[:, :-1]\n",
+    "y = data['y']\n",
+    "\n",
+    "y.value_counts()"
    ],
    "metadata": {
     "collapsed": false,
@@ -33,27 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "from Python.sklearn.data_split import *\n",
-    "X_bal, y_bal = balance_sample(X, y)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "random_seed = 42\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=random_seed)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=random_seed, stratify=y)"
    ],
    "metadata": {
     "collapsed": false,
@@ -64,7 +60,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    4083\n1    4083\nName: y, dtype: int64"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "oversample = SMOTE()\n",
+    "X_over, y_over = oversample.fit_resample(X_train, y_train)\n",
+    "y_over.value_counts()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -72,11 +94,11 @@
      "text": [
       "10-fold cross validation:\n",
       "\n",
-      "ROC AUC: 0.64(+/- 0.03) [LR]\n",
-      "ROC AUC: 0.57(+/- 0.02) [DT]\n",
-      "ROC AUC: 0.59(+/- 0.03) [KNN]\n",
-      "ROC AUC: 0.66(+/- 0.01) [SVC]\n",
-      "ROC AUC: 0.66(+/- 0.04) [RFC]\n"
+      "ROC AUC: 0.69(+/- 0.01) [LR]\n",
+      "ROC AUC: 0.57(+/- 0.01) [DT]\n",
+      "ROC AUC: 0.89(+/- 0.01) [KNN]\n",
+      "ROC AUC: 0.82(+/- 0.02) [SVC]\n",
+      "ROC AUC: 0.98(+/- 0.01) [RFC]\n"
      ]
     }
    ],
@@ -90,19 +112,48 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "clf1 = LogisticRegression(penalty='l2', C=0.001, random_state=1)\n",
-    "clf2 = DecisionTreeClassifier(max_depth=1, criterion='entropy', random_state=0)\n",
+    "clf1 = LogisticRegression(penalty='l2', C=0.001, random_state=random_seed)\n",
+    "clf2 = DecisionTreeClassifier(max_depth=1, criterion='entropy', random_state=random_seed)\n",
     "clf3 = KNeighborsClassifier(n_neighbors=1, p=2, metric='minkowski')\n",
-    "clf4 = SVC(degree=2, probability=True)\n",
-    "clf5 = RandomForestClassifier()\n",
+    "clf4 = SVC(degree=2, probability=True, random_state=random_seed)\n",
+    "clf5 = RandomForestClassifier(random_state=random_seed)\n",
     "\n",
     "clf_labels = ['LR', 'DT', 'KNN', 'SVC', 'RFC']\n",
     "clfs = [clf1, clf2, clf3, clf4, clf5]\n",
     "print('10-fold cross validation:\\n')\n",
     "for clf, label in zip(clfs, clf_labels):\n",
-    "    scores = cross_val_score(estimator=clf, X=X_train, y=y_train, cv=10, scoring='roc_auc')\n",
+    "    scores = cross_val_score(estimator=clf, X=X_over, y=y_over, cv=10, scoring='roc_auc')\n",
     "    print(\"ROC AUC: %.2f(+/- %0.2f) [%s]\" % (scores.\n",
     "                                             mean(), scores.std(), label))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR f1_score: 35.5963%\n",
+      "DT f1_score: 22.0126%\n",
+      "KNN f1_score: 34.6505%\n",
+      "SVC f1_score: 41.9974%\n",
+      "RFC f1_score: 38.7991%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "for (idx, clf) in enumerate(clfs):\n",
+    "    clf.fit(X=X_over, y=y_over)\n",
+    "    print(\"%s f1_score: %.4f%%\" %(clf_labels[idx], f1_score(y_test, clf.predict(X_test)) * 100))"
    ],
    "metadata": {
     "collapsed": false,
