practice1 logistic regression model tuning

--- a/MachineLearning/practice/1_feature_selection2.ipynb
+++ b/MachineLearning/practice/1_feature_selection2.ipynb
@@ -348,6 +348,31 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "test = pd.read_excel(\"././data/1_test.xlsx\")\n",
+    "test_tmp = pd.merge(test, counts50, how='left', on='主页ID')\n",
+    "test_hl_score = test_tmp['hl_score'].fillna(0)\n",
+    "test_fl, fl_ohe = one_hot_encoder_column(test, '分类', fl_mapping, fill_na=7)\n",
+    "test_fl = pd.DataFrame(data_fl)\n",
+    "test_doc_type, ohe_doc_type = one_hot_encoder_column(test, '发文类型', doc_type_map, fill_na=3)\n",
+    "test_all = test.apply(lambda x: split_word(str(x['message']) + str(x['name']) + str(x['description']), stop_words, ['蔡依林', '叶明兰','叶镇中', '宋家豪', '白先勇','林智胜']), axis=1)\n",
+    "test_doc = tfidf_vec.transform(test_all)\n",
+    "test_doc_df = pd.DataFrame(test_doc.toarray(), columns=tfidf_vec.get_feature_names_out())\n",
+    "\n",
+    "test_set = pd.concat([data_hl_score, data_fl, data_doc_type, test_doc_df], axis=1)\n",
+    "test_set.to_csv(\"./data/1_test1.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
