practice after teaching

--- a/MachineLearning/practice/1_model_train.ipynb
+++ b/MachineLearning/practice/1_model_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
       "text/plain": "0    5444\n1    1044\nName: y, dtype: int64"
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -60,13 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
       "text/plain": "0    4083\n1    4083\nName: y, dtype: int64"
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
     "from imblearn.over_sampling import SMOTE, BorderlineSMOTE\n",
     "oversample = BorderlineSMOTE()\n",
     "X_over, y_over = oversample.fit_resample(X_train, y_train)\n",
-    "y_over.value_counts()"
+    "y_over.value_counts()\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -112,7 +112,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "clf1 = LogisticRegression(penalty='l2', C=0.001, random_state=random_seed)\n",
+    "clf1 = LogisticRegression(penalty='l2', C=100, random_state=random_seed)\n",
     "clf2 = DecisionTreeClassifier(max_depth=1, criterion='entropy', random_state=random_seed)\n",
     "clf3 = KNeighborsClassifier(n_neighbors=1, p=2, metric='minkowski')\n",
     "clf4 = SVC(degree=2, probability=True, random_state=random_seed)\n",
@@ -194,6 +194,31 @@
     "                                             mean(), score6.std(), \"XGB\"))\n",
     "clf6.fit(X=X_over, y=y_over)\n",
     "print(\"%s f1_score: %.4f%%\" %(\"XGB\", f1_score(y_test, clf6.predict(X_test)) * 100))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BAYES f1_score: 28.8947%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "clf7 = GaussianNB()\n",
+    "clf7.fit(X_over, y_over)\n",
+    "print(\"%s f1_score: %.4f%%\" %(\"BAYES\", f1_score(y_test, clf7.predict(X_test)) * 100))\n"
    ],
    "metadata": {
     "collapsed": false,
