practice using ltp, seems not working

--- a/MachineLearning/practice/1_feature_selection3.ipynb
+++ b/MachineLearning/practice/1_feature_selection3.ipynb
@@ -27,6 +27,7 @@
     }
    ],
    "source": [
+    "pd.read_csv()\n",
     "data = pd.read_excel(\"./data/cda1_1.xlsx\")\n",
     "data.head(5)"
    ],
@@ -198,11 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "outputs": [],
    "source": [
-    "data_nosplit = data.apply(lambda x: str(x['message']) + str(x['name']) + str(x['description']), axis=1)\n",
-    "data_nosplit.to_csv(\"data/no_lines.csv\")"
+    "data['nosplit'] = data.apply(lambda x: str(x['message']) + str(x['name']) + str(x['description']), axis=1)\n",
+    "#data_nosplit.to_csv(\"data/no_lines.csv\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -241,16 +242,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [],
+   "execution_count": 93,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['中华队长', '林智胜', '三分砲', '！', '！', '！', '人如其名\\u3000真的', '「', '致胜', '」', '阿～nanna', '。']]\n",
+      "[['ni', 'nh', 'n', 'wp', 'wp', 'wp', 'i', 'wp', 'v', 'wp', 'nh', 'wp']]\n",
+      "[[('Ni', 0, 0), ('Nh', 1, 1), ('Nh', 10, 10)]]\n"
+     ]
+    }
+   ],
    "source": [
-    "seg, hidden = ltp.seg([\"他叫汤姆去拿外衣。\"])\n",
+    "seg, hidden = ltp.seg([\"中华队长林智胜 三分砲！！！\\n人如其名\\u3000真的「致胜」阿～nanna。\"])\n",
     "pos = ltp.pos(hidden) # 词性标注\n",
     "ner = ltp.ner(hidden) # 命名实体识别\n",
     "srl = ltp.srl(hidden) # 语义角色标注\n",
     "dep = ltp.dep(hidden) # 依存句法分析\n",
     "sdp = ltp.sdp(hidden) # 语义依存分析(树)\n",
-    "# sdp = ltp.sdp(hidden, mode='graph')  # 语义依存分析(图)"
+    "# sdp = ltp.sdp(hidden, mode='graph')  # 语义依存分析(图)\n",
+    "print(seg)\n",
+    "print(pos)\n",
+    "print(ner)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "all_words = []\n",
+    "for doc in data['nosplit'].tolist():\n",
+    "    seg, hidden = ltp.seg([doc])\n",
+    "    pos = ltp.pos(hidden)[0]\n",
+    "    words = []\n",
+    "    for (idx, p) in enumerate(pos):\n",
+    "        if p.startswith('n'):\n",
+    "            words.append(seg[0][idx])\n",
+    "    all_words.append(words)\n",
+    "all_words[:5]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'中华队长林智胜 三分砲！！！\\n人如其名\\u3000真的「致胜」阿～nannan'"
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['nosplit'].tolist()[0]"
    ],
    "metadata": {
     "collapsed": false,
@@ -299,13 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
       "text/plain": "[[('Ni', 0, 0), ('Nh', 1, 1)],\n [],\n [('Nh', 9, 9), ('Ns', 37, 37), ('Nh', 102, 102)],\n [],\n [('Ns', 20, 20),\n  ('Ns', 50, 50),\n  ('Ns', 53, 53),\n  ('Ns', 85, 85),\n  ('Ns', 86, 86),\n  ('Ns', 97, 97),\n  ('Ns', 99, 99),\n  ('Ns', 119, 119),\n  ('Ns', 144, 144)],\n [('Ni', 3, 3),\n  ('Ns', 5, 5),\n  ('Nh', 10, 10),\n  ('Ns', 17, 17),\n  ('Ni', 22, 22),\n  ('Nh', 23, 23),\n  ('Ns', 53, 53),\n  ('Ns', 65, 65)],\n [('Ns', 4, 4), ('Ni', 13, 13)],\n [('Nh', 13, 13), ('Nh', 20, 20), ('Ni', 24, 24), ('Nh', 34, 34)],\n [('Nh', 9, 9), ('Nh', 18, 18)],\n [('Ni', 16, 16),\n  ('Ns', 18, 18),\n  ('Ni', 33, 33),\n  ('Ns', 36, 36),\n  ('Ni', 37, 37),\n  ('Ni', 53, 53)]]"
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +374,64 @@
    "source": [
     "seg, hidden = ltp.seg(data_nosplit[:10])\n",
     "ner = ltp.ner(hidden)\n",
-    "ner\n"
+    "ner"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [],
+   "source": [
+    "keys = set()\n",
+    "for doc in data_nosplit:\n",
+    "    doc_split = doc.split(\"#\")\n",
+    "    if len(doc_split)> 1:\n",
+    "        for s in doc_split[1:]:\n",
+    "            if len(s.strip()) < 8:\n",
+    "                keys.add(s)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [
+    {
+     "ename": "OverflowError",
+     "evalue": "int too large to convert to float",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mOverflowError\u001B[0m                             Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-57-4d51a1f07408>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m data_all = data.apply(lambda x: split_word(\n\u001B[0m\u001B[0;32m      2\u001B[0m     \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'message'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'name'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'description'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m     stop_words, keys),axis=1)\n\u001B[0;32m      4\u001B[0m \u001B[0mdata_all\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mD:\\anaconda\\lib\\site-packages\\pandas\\core\\frame.py\u001B[0m in \u001B[0;36mapply\u001B[1;34m(self, func, axis, raw, result_type, args, **kwargs)\u001B[0m\n\u001B[0;32m   8738\u001B[0m             \u001B[0mkwargs\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   8739\u001B[0m         )\n\u001B[1;32m-> 8740\u001B[1;33m         \u001B[1;32mreturn\u001B[0m \u001B[0mop\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mapply\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   8741\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   8742\u001B[0m     def applymap(\n",
+      "\u001B[1;32mD:\\anaconda\\lib\\site-packages\\pandas\\core\\apply.py\u001B[0m in \u001B[0;36mapply\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    686\u001B[0m             \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mapply_raw\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    687\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 688\u001B[1;33m         \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mapply_standard\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    689\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    690\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0magg\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mD:\\anaconda\\lib\\site-packages\\pandas\\core\\apply.py\u001B[0m in \u001B[0;36mapply_standard\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    810\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    811\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0mapply_standard\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 812\u001B[1;33m         \u001B[0mresults\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mres_index\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mapply_series_generator\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    813\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    814\u001B[0m         \u001B[1;31m# wrap results\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mD:\\anaconda\\lib\\site-packages\\pandas\\core\\apply.py\u001B[0m in \u001B[0;36mapply_series_generator\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    826\u001B[0m             \u001B[1;32mfor\u001B[0m \u001B[0mi\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mv\u001B[0m \u001B[1;32min\u001B[0m \u001B[0menumerate\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mseries_gen\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    827\u001B[0m                 \u001B[1;31m# ignore SettingWithCopy here in case the user mutates\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 828\u001B[1;33m                 \u001B[0mresults\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mi\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mf\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mv\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    829\u001B[0m                 \u001B[1;32mif\u001B[0m \u001B[0misinstance\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mresults\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mi\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mABCSeries\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    830\u001B[0m                     \u001B[1;31m# If we have a view on v, we need to make a copy because\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-57-4d51a1f07408>\u001B[0m in \u001B[0;36m<lambda>\u001B[1;34m(x)\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m data_all = data.apply(lambda x: split_word(\n\u001B[0m\u001B[0;32m      2\u001B[0m     \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'message'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'name'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'description'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m     stop_words, keys),axis=1)\n\u001B[0;32m      4\u001B[0m \u001B[0mdata_all\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mE:\\TwilightStruggle\\Python\\nlp\\nlp.py\u001B[0m in \u001B[0;36msplit_word\u001B[1;34m(document, stop_words, words)\u001B[0m\n\u001B[0;32m     26\u001B[0m     \u001B[0mpattern\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mre\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcompile\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mchinese_regular\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     27\u001B[0m     \u001B[1;32mfor\u001B[0m \u001B[0mword\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mwords\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 28\u001B[1;33m         \u001B[0mjieba\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0madd_word\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mword\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     29\u001B[0m     \u001B[0mli\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;34m\" \"\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mjoin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mjieba\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcut\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdocument\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     30\u001B[0m     \u001B[0mvocabulary\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;33m[\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mD:\\anaconda\\lib\\site-packages\\jieba\\__init__.py\u001B[0m in \u001B[0;36madd_word\u001B[1;34m(self, word, freq, tag)\u001B[0m\n\u001B[0;32m    425\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcheck_initialized\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    426\u001B[0m         \u001B[0mword\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mstrdecode\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mword\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 427\u001B[1;33m         \u001B[0mfreq\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfreq\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;32mif\u001B[0m \u001B[0mfreq\u001B[0m \u001B[1;32mis\u001B[0m \u001B[1;32mnot\u001B[0m \u001B[1;32mNone\u001B[0m \u001B[1;32melse\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msuggest_freq\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mword\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;32mFalse\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    428\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mFREQ\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mword\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mfreq\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    429\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtotal\u001B[0m \u001B[1;33m+=\u001B[0m \u001B[0mfreq\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mD:\\anaconda\\lib\\site-packages\\jieba\\__init__.py\u001B[0m in \u001B[0;36msuggest_freq\u001B[1;34m(self, segment, tune)\u001B[0m\n\u001B[0;32m    457\u001B[0m         \"\"\"\n\u001B[0;32m    458\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcheck_initialized\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 459\u001B[1;33m         \u001B[0mftotal\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mfloat\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtotal\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    460\u001B[0m         \u001B[0mfreq\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    461\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0misinstance\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msegment\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mstring_types\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mOverflowError\u001B[0m: int too large to convert to float"
+     ]
+    }
+   ],
+   "source": [
+    "data_all = data.apply(lambda x: split_word(\n",
+    "    str(x['message']) + str(x['name']) + str(x['description']),\n",
+    "    stop_words, keys),axis=1)\n",
+    "data_all"
    ],
    "metadata": {
     "collapsed": false,
