--- a/MachineLearning/practice/1_model_train.ipynb
+++ b/MachineLearning/practice/1_model_train.ipynb
@@ -111,8 +111,14 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.pipeline import  make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "clf1 = LogisticRegression(penalty='l2', C=100, random_state=random_seed)\n",
+    "clfk = make_pipeline([StandardScaler(), clf1])\n",
+    "\n",
+    "\n",
+    "\n",
     "clf2 = DecisionTreeClassifier(max_depth=1, criterion='entropy', random_state=random_seed)\n",
     "clf3 = KNeighborsClassifier(n_neighbors=1, p=2, metric='minkowski')\n",
     "clf4 = SVC(degree=2, probability=True, random_state=random_seed)\n",
@@ -297,7 +303,25 @@
     "plt.grid(alpha=0.5)\n",
     "plt.xlabel(\"False positive rate(FPR)\")\n",
     "plt.ylabel(\"True positive rate(TPR)\")\n",
-    "plt.show()"
+    "plt.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "test_data = pd.read_csv(\"test.csv\")\n",
+    "test_pred = clf1.predict(test_data)\n",
+    "test_all = pd.concat([test_data, pd.DataFrame(test_pred, columns=['y'])], axis=1)\n",
+    "test_all = test_all[['主页ID', 'y']]\n",
+    "test_all.save(\"yourname_result.csv\")"
    ],
    "metadata": {
     "collapsed": false,
